--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7",
-    "request": "^2.88.2"
+    "got": "^11.8.2",
+    "nodemon": "^2.0.7"
   }
 }
