--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-bulma-components": "^4.0.4",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
